--- a/src/Video.css
+++ b/src/Video.css
@@ -1,23 +1,25 @@
+/** @format */
+
 body {
     margin: 0;
 }
 
 .flex-container {
-    height: calc(100% - 150px);
-    width: 100%;
+    width: 50%;
     /* margin: 0 auto; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 
 .container {
     height: 100vh;
-    width: 100vw;
-    max-width: 100vw;
-    max-height: 100vh;
-
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -31,9 +33,10 @@ body {
 }
 
 .btn-down {
+    position: fixed;
+    bottom: 0;
+    left: 0;
     z-index: 2;
-    position: fixed; 
-    bottom: 0px;
     width: 100%;
     height: auto;
 }
