--- a/src/style/_bugnar.scss
+++ b/src/style/_bugnar.scss
@@ -1,4 +1,11 @@
 /** @format */
+
+$movinchis: #4022c6;
+$mov: #5e36de;
+$rozdeschis: #e27cae;
+$rozaprins: #dc3d82;
+$albastrufundal: #d5ddfd;
+$albastrufundalinchis: #b4c1ef;
 body {
 	overflow-x: hidden;
 }
@@ -10,26 +17,31 @@ body {
 		font-size: 15px;
 	}
 	.intrebare1 {
-		background-color: rgb(63, 81, 181);
+		background-color: $movinchis;
 		padding: 20px;
 		margin-bottom: 20px;
 		margin-left: 15%;
 		width: 70%;
 		border-radius: 10px;
+		color: $rozdeschis;
+		margin-top: -20px;
 		@media only screen and (max-width: 600px) {
+			margin-top: -30px;
 			margin-left: 0%;
 			width: 100%;
 			padding: 10px;
 		}
+
+		transition: all 0.5s;
 	}
-	button {
+	.butonnext {
 		margin-left: 20px;
 		border-radius: 20px;
 		padding: 10px;
-		background-color: rgb(63, 81, 181);
+		background-color: $movinchis;
 		color: whitesmoke;
 		border: none;
-		transition: all 0.2s;
+		transition: all 0.5s;
 	}
 	.intrebarespan {
 		transition: all 0.5s;
@@ -39,6 +51,40 @@ body {
 	}
 	.active {
 		opacity: 0;
+		pointer-events: none;
+	}
+	.timeleft {
+		margin-left: 20px;
+		color: black;
+	}
+}
+.container {
+	.timeleft {
+		color: $movinchis;
+	}
+	.MuiInputBase-root {
+		color: $movinchis;
+	}
+	.MuiInputBase-root::before {
+		left: 0;
+		right: 0;
+		bottom: 0;
+		content: '\00a0';
+		position: absolute;
+		transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1)
+			0ms;
+		border-bottom: 1px solid $movinchis;
+		pointer-events: none;
+	}
+	.MuiInputBase-root:after {
+		left: 0;
+		right: 0;
+		bottom: 0;
+		content: '';
+		position: absolute;
+		transform: scaleX(0);
+		transition: transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+		border-bottom: 2px solid $movinchis;
 		pointer-events: none;
 	}
 }
