--- a/src/style/css.css
+++ b/src/style/css.css
@@ -15,31 +15,36 @@ body {
 }
 
 .indiv .intrebare1 {
-  background-color: #3f51b5;
+  background-color: #4022c6;
   padding: 20px;
   margin-bottom: 20px;
   margin-left: 15%;
   width: 70%;
   border-radius: 10px;
+  color: #e27cae;
+  margin-top: -20px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 @media only screen and (max-width: 600px) {
   .indiv .intrebare1 {
+    margin-top: -30px;
     margin-left: 0%;
     width: 100%;
     padding: 10px;
   }
 }
 
-.indiv button {
+.indiv .butonnext {
   margin-left: 20px;
   border-radius: 20px;
   padding: 10px;
-  background-color: #3f51b5;
+  background-color: #4022c6;
   color: whitesmoke;
   border: none;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .indiv .intrebarespan {
@@ -53,6 +58,47 @@ body {
 
 .indiv .active {
   opacity: 0;
+  pointer-events: none;
+}
+
+.indiv .timeleft {
+  margin-left: 20px;
+  color: black;
+}
+
+.container .timeleft {
+  color: #4022c6;
+}
+
+.container .MuiInputBase-root {
+  color: #4022c6;
+}
+
+.container .MuiInputBase-root::before {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: '\00a0';
+  position: absolute;
+  -webkit-transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-bottom: 1px solid #4022c6;
+  pointer-events: none;
+}
+
+.container .MuiInputBase-root:after {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: '';
+  position: absolute;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: -webkit-transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  transition: -webkit-transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  transition: transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  transition: transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms, -webkit-transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  border-bottom: 2px solid #4022c6;
   pointer-events: none;
 }
 
