--- a/src/Video.css
+++ b/src/Video.css
@@ -1,42 +1,44 @@
 /** @format */
 
 body {
-    margin: 0;
+	margin: 0;
 }
 
 .flex-container {
-    width: 50%;
-    /* margin: 0 auto; */
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-left: 50%;
-    transform: translateX(-50%);
+	width: 50%;
+	/* margin: 0 auto; */
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	margin-left: 50%;
+	transform: translateX(-50%);
+	box-sizing: border-box;
 }
 
 .container {
-    height: 100vh;
-    width: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+	height: 100vh;
+	width: 100%;
+	max-width: 100%;
+	max-height: 100%;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
 
 .div-send-msg {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
 
 .btn-down {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 2;
-    width: 100%;
-    height: auto;
+	position: relative;
+	margin-top: 100px;
+	bottom: 0;
+	left: 0;
+	z-index: 2;
+	width: 100%;
+	height: auto;
 }
