--- a/src/style/css.css
+++ b/src/style/css.css
@@ -108,6 +108,12 @@ body {
   }
 }
 
+.flex-container .taiere {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 /** @format */
 .col {
   float: left;
