--- a/src/style/_bugnar.scss
+++ b/src/style/_bugnar.scss
@@ -101,12 +101,14 @@ body {
 		}
 	}
 }
-.flex-container {
-	video {
-		min-width: 45vw;
-		box-sizing: border-box;
-		@media only screen and (max-width: 600px) {
-			min-width: 100vw;
+.videouri {
+	.flex-container {
+		video {
+			min-width: 45vw;
+			box-sizing: border-box;
+			@media only screen and (max-width: 600px) {
+				min-width: 100vw;
+			}
 		}
 	}
 }
