--- a/src/style/css.css
+++ b/src/style/css.css
@@ -123,14 +123,14 @@ body {
   }
 }
 
-.flex-container video {
+.videouri .flex-container video {
   min-width: 45vw;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
 @media only screen and (max-width: 600px) {
-  .flex-container video {
+  .videouri .flex-container video {
     min-width: 100vw;
   }
 }
