--- a/src/style/_bugnar.scss
+++ b/src/style/_bugnar.scss
@@ -105,9 +105,11 @@ body {
 	.flex-container {
 		video {
 			min-width: 45vw;
+			width: 45vw;
 			box-sizing: border-box;
 			@media only screen and (max-width: 600px) {
-				min-width: 100vw;
+				min-width: 90vw;
+				width: 90vw;
 			}
 		}
 	}
