--- a/src/style/_bugnar.scss
+++ b/src/style/_bugnar.scss
@@ -60,7 +60,9 @@ body {
 }
 .container {
 	.timeleft {
-		color: $movinchis;
+		span {
+			color: $rozaprins;
+		}
 	}
 	.MuiInputBase-root {
 		color: $movinchis;
