--- a/src/style/_bugnar.scss
+++ b/src/style/_bugnar.scss
@@ -95,20 +95,16 @@ body {
 			color: $movinchis;
 		}
 	}
-	#my-video {
-		min-width: 45%;
-		box-sizing: border-box;
-	}
 }
 .videouri {
 	.flex-container {
 		video {
-			min-width: 45vw;
-			width: 45vw;
+			min-width: 40%;
+			width: 40%;
 			box-sizing: border-box;
 			@media only screen and (max-width: 600px) {
-				min-width: 90vw;
-				width: 90vw;
+				min-width: 85%;
+				width: 85%;
 			}
 		}
 	}
