--- a/src/style/_bugnar.scss
+++ b/src/style/_bugnar.scss
@@ -102,7 +102,7 @@ body {
 		overflow: hidden;
 		height: 100%;
 		max-width: 50vh;
-		@media only screen and (max-width: 600px) {
+		@media only screen and (min-width: 600px) {
 			max-height: 30vw;
 		}
 		video {
