--- a/src/style/css.css
+++ b/src/style/css.css
@@ -121,7 +121,7 @@ body {
   max-width: 50vh;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   .videouri .flex-container {
     max-height: 30vw;
   }
